1) Stopped scrolling while using modal 2) Fixed loading and error not showing up when fetching data3) Fixed page height not taking into account address bars on mobile 4) Fixed mobile input selection 5) Set url to .../solvre 6) Added page title

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 :root {
 	--header-height: 50px;
-	--game-min-height: calc(100vh - calc(var(--keyboard-height) + (var(--header-height))));
+	/* --game-min-height: calc(100% - calc(var(--keyboard-height) + (var(--header-height)))); */
+	--game-min-height: calc(100% - var(--keyboard-height));
 	--game-max-width: 500px;
 	--keyboard-height: 200px;
 	--key-color: #818384;
@@ -17,23 +18,27 @@
 	max-width: var(--game-max-width);
 	margin: 0 auto;
 	height: calc(100% - var(--header-height));
-	/* height: -webkit-calc(100% - var(--header-height)); */
 	display: flex;
 	flex-direction: column;
 }
-
-
 body, html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* height: 100%; */
   margin: 0;
   padding: 0;
 	background-color: #121213;
+	height: 100%;
+	width: 100%;
 }
-body {
-	min-height: 100vh;
+
+input,
+textarea,
+button,
+select,
+div,
+a {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
