--- a/src/components/board/keyboard/Key/Key.css
+++ b/src/components/board/keyboard/Key/Key.css
@@ -14,6 +14,10 @@
   align-items: center;
   color: white;
 }
+.Key:focus {
+  box-shadow: none;
+  outline: none;
+}
 .one-and-a-half {
   flex: 1.5;
   font-size: 12px;
